Fix console overlap

--- a/SCSS/Notion like Callout Rem.scss
+++ b/SCSS/Notion like Callout Rem.scss
@@ -60,6 +60,8 @@
                     span.emoji-powerup {
                         position: absolute;
                         left: -1.5rem;
+                        z-index: 0;
+                        pointer-events: none;
                     }
                 }
             }
